--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
     push:
 
 jobs:
-    test:
+    Test:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3
