--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -42,8 +42,8 @@ jobs:
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 with:
-                    tag_name: ${{ steps.get_latest_release.outputs.result }}-${{ github.sha }}
-                    release_name: Release ${{ steps.get_latest_release.outputs.result }}-${{ github.sha }}
+                    tag_name: ${{ steps.get_latest_release.outputs.result.replace('\"', '') }}-${{ github.sha }}
+                    release_name: Release ${{ steps.get_latest_release.outputs.result.replace('\"', '') }}-${{ github.sha }}
                     draft: false
                     prerelease: false
             -   name: Upload release asset
