--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -27,7 +27,7 @@ jobs:
                 id: get_latest_release
                 with:
                     script: |
-                        const { data: releases } = await github.repos.listReleases({
+                        const { data: releases } = await github.rest.repos.listReleases({
                             owner: context.repo.owner,
                             repo: context.repo.repo,
                             per_page: 1
