--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -8,8 +8,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3
-            -   name: Install dependencies
-                run: yarn
+            -   uses: actions/setup-node@v3
+                with:
+                    node-version: 16
+                    cache: 'yarn'
             -   name: Run tests
                 run: yarn test
     Deploy:
@@ -17,8 +19,12 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3
+            -   uses: actions/setup-node@v3
+                with:
+                    node-version: 16
+                    cache: 'yarn'
             -   name: Compiled source code
-                run: yarn && yarn build
+                run: yarn build
             -   name: Zip compiled source code
                 run: |
                     zip -r dist.zip dist/
@@ -32,20 +38,22 @@ jobs:
                             repo: context.repo.repo,
                             per_page: 1
                         });
-                        return releases[0].tag_name.replace('"', '');
+                        return releases[0].tag_name;
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             -   name: Create release
                 id: create_release
-                uses: actions/create-release@v1
+                uses: ncipollo/release-action@v1
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 with:
-                    tag_name: "${{ steps.get_latest_release.outputs.result }}-${{ github.sha }}"
-                    release_name: "Release ${{ steps.get_latest_release.outputs.result }}-${{ github.sha }}"
+                    tag: ${{ steps.get_latest_release.outputs.result }}-${{ github.sha }}
+                    name: Release ${{ steps.get_latest_release.outputs.result }}-${{ github.sha }}
                     draft: false
                     prerelease: false
+                    generateReleaseNotes: true
+                    makeLatest: true
             -   name: Upload release asset
                 id: upload-release-asset
                 uses: actions/upload-release-asset@v1
