--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -12,6 +12,7 @@ jobs:
                 with:
                     node-version: 16
                     cache: 'yarn'
+            -   run: yarn install --frozen-lockfile # optional, --immutable
             -   name: Run tests
                 run: yarn test
     Deploy:
@@ -23,6 +24,7 @@ jobs:
                 with:
                     node-version: 16
                     cache: 'yarn'
+            -   run: yarn install --frozen-lockfile # optional, --immutable
             -   name: Compiled source code
                 run: yarn build
             -   name: Zip compiled source code
