--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -40,7 +40,7 @@ jobs:
                             repo: context.repo.repo,
                             per_page: 1
                         });
-                        return releases[0].tag_name;
+                        return releases[0].tag_name.replaceAll('"', '');
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
