--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -40,7 +40,9 @@ jobs:
                             repo: context.repo.repo,
                             per_page: 1
                         });
-                        return releases[0].tag_name.replaceAll('"', '');
+                        console.log(releases[0].tag_name)
+                        return releases[0].tag_name;
+                    result-encoding: string
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
