--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -47,16 +47,14 @@ jobs:
 
             -   name: Create release
                 id: create_release
-                uses: ncipollo/release-action@v1
+                uses: actions/create-release@v1
                 env:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 with:
-                    tag: ${{ steps.get_latest_release.outputs.result }}-${{ github.sha }}
-                    name: Release ${{ steps.get_latest_release.outputs.result }}-${{ github.sha }}
+                    tag_name: ${{ steps.get_latest_release.outputs.result }}-${{ github.sha }}
+                    release_name: Release ${{ steps.get_latest_release.outputs.result }}-${{ github.sha }}
                     draft: false
                     prerelease: false
-                    generateReleaseNotes: true
-                    makeLatest: true
             -   name: Upload release asset
                 id: upload-release-asset
                 uses: actions/upload-release-asset@v1
